Home de login actualizado, se elimino el menu

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends "AppUserBundle::layout-simple.html.twig" %}
+{% extends "AppUserBundle::layout-login.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
