--- a/app/Resources/AppUserBundle/views/layout-login.html.twig
+++ b/app/Resources/AppUserBundle/views/layout-login.html.twig
@@ -3,10 +3,10 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-        <meta name="description" content="Robust admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities.">
-        <meta name="keywords" content="admin template, robust admin template, dashboard template, flat admin template, responsive admin template, web app">
-        <meta name="author" content="PIXINVENT">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">        
+        <meta name="description" content="MEDECONSULT">
+        <meta name="keywords" content="MEDECONSULT, telemedicina">
+        <meta name="author" content="MEDECONSULT">        
         <title>{% block title %}MEDECONSULT{% endblock %}</title>
         <link rel="apple-touch-icon" sizes="60x60" href="{{ asset('bundles/app/md-assets/images/ico/apple-icon-60.png') }}">
         <link rel="apple-touch-icon" sizes="76x76" href="{{ asset('bundles/app/md-assets/images/ico/apple-icon-76.png') }}">
@@ -91,18 +91,10 @@
 
 
 <!-- main menu-->
-<div role="navigation" id="nav-site-pub" class="header-navbar navbar navbar-horizontal navbar-light navbar-without-dd-arrow menu-site-public">
-    <!-- Horizontal menu content-->
-    <div data-menu="menu-container" class="navbar-container main-menu-content container center-layout">
-        <!-- include ../../../includes/mixins-->
-        <ul id="main-menu-navigation" data-menu="menu-navigation" class="nav navbar-nav">
-            <li class="nav-item"><a href="index.html" class="nav-link"><span data-i18n="nav.dash.main"><i class="fa fa-user-md"></i> Doctores</span></a></li>
-            <li class="nav-item"><a href="index.html" class="nav-link"><span data-i18n="nav.dash.main"><i class="fa fa-newspaper-o "></i> Noticias</span></a></li>
-            <li class="nav-item"><a href="index.html" class="nav-link"><span data-i18n="nav.dash.main"><i class=" fa fa-medkit"></i> Contacto</span></a></li>
-        </ul>
-    </div>
-</div>
+<!-- odv-->
 <!-- / main menu-->
+
+
 <div class="bg-grey-light">
 
     <div class="app-content container center-layout ">
